--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -7,7 +7,14 @@
 <br>
 
 <% @items.each do |item| %>
-    <%= item.name %><br>
+
+    <h3>
+        <%= link_to item.name, item_path(item)%>    
+    </h3>
+
+    <%= item_path(item) %><br>
+    <%= item_url(item) %><br>
+
     <%= item.price %><br>
     <%= item.phone %><br>
     <hr>
