--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,6 +5,10 @@
 <%= @items[1].name %><br>
 <%= @items[2].name %><br>
 <br>
+<br>
+
+<%= link_to "Pridat Inzerat", new_item_path%>  
+
 
 <% @items.each do |item| %>
 
