--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,3 +6,7 @@
 
 <%= @item.name %><br>
 <%= @item.price %>
+
+<p>
+    <%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %>
+</p>
