Add validation; display validation errors; permit attributes

--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,6 +3,13 @@
 <p>
     <%= link_to "Spat", items_path %>
 </p>
+<ul class="text-red">
+    <% @item.errors.full_messages.each do |message| %>
+        <li><%= message %><br></li>
+    <% end%>
+</ul>
+
+
 
 <%= form_with model: @item do |f| %>
     <div>
