--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -13,8 +13,14 @@
 
 
     <%= item.price %><br>
-    <%= item.phone %><br>
+    <%= item.phone %>
     
-    <%= link_to "Odstranit", item_path(item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %>
+    <p>
+        <%= link_to "Upravit", edit_item_path(item)%>
+    </p>
+    <p>
+        <%= link_to "Odstranit", item_path(item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %>
+    </p>
+    
     <hr>
 <% end %>
