--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,15 +1,5 @@
-<p>
-    <%= link_to "Spat", items_path %>
-</p>
-<ul class="text-red">
-    <% @item.errors.full_messages.each do |message| %>
-        <li><%= message %><br></li>
-    <% end%>
-</ul>
 
-
-
-<%= form_with model: @item do |f| %>
+<%= form_with model: item do |f| %>
     <div>
         <%= f.label :name %>
         <%= f.text_field :name %>
