--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -3,10 +3,6 @@
 <p>
     <%= link_to "Spat", items_path %>
 </p>
-<ul class="text-red">
-    <% @item.errors.full_messages.each do |message| %>
-        <li><%= message %><br></li>
-    <% end%>
-</ul>
 
+<%= render 'shared/errors', resource: @item %>
 <%= render 'form', item: @item %>
