--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -8,5 +8,9 @@
         <%= f.label :price %>
         <%= f.text_field :price %>
     </div>
+    <div>
+        <%= f.label :caterogy_id %>
+        <%= f.select :category_id, Category.all.map { |c| [c.name, c.id]} %>
+    </div>
     <%= f.submit %>
 <% end %>
