--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,6 +4,12 @@
     <%= link_to "Spat", items_path %>
 </p>
 
+<% if @item.category.present? %>
+    <p>
+        Katerogia: <%= @item.category.name %>
+    </p>
+<% end %>
+
 <%= @item.name %><br>
 <%= @item.price %>
 
