adding category logic

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,12 @@
   </head>
 
   <body>
+    <nav>
+      <ul>
+        <li><%= link_to "Inzeraty", items_path %></li>
+        <li><%= link_to "Kategorie", categories_path %></li>
+      </ul>
+    </nav>
     <%= yield %>
   </body>
 </html>
