--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,21 +1,13 @@
-<h1>detial inzeratu</h1>
+<h1>Detial inzeratu</h1>
 
-<p>
-    <%= link_to "Spat", items_path %>
-</p>
+<p><%= link_to "Spat", items_path %></p>
 
 <% if @item.category.present? %>
-    <p>
-        Katerogia: <%= @item.category.name %>
-    </p>
+    <p>Katerogia: <%= @item.category.name %></p>
 <% end %>
 
 <%= @item.name %><br>
 <%= @item.price %>
 
-<p>
-    <%= link_to "Upravit", edit_item_path(@item)%>
-</p>
-<p>
-    <%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %>
-</p>
+<p><%= link_to "Upravit", edit_item_path(@item)%></p>
+<p><%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %></p>
