--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,5 +3,5 @@
         <%= f.label :name %>
         <%= f.text_field :name %>
     </div>
-    <%= f.submit %>
+    <%= f.submit t('.save_changes') %>
 <% end %>
