--- a/app/views/categories/edit.html.erb
+++ b/app/views/categories/edit.html.erb
@@ -1,4 +1,5 @@
 <h1>Edit kategorie</h1>
 <p><%= link_to "Spat", categories_path %></p>
 
+<%= render "shared/errors", resource: @category %>
 <%= render "form", category: @category %>
