--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Pridanie kategorie</h1>
 <p><%= link_to "Spat", categories_path %></p>
 
+<%= render 'shared/errors', resource: @category %>
 <%= render 'form', category: @category %>
