style buttons test

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Inzeraty</h1>
 
-<%= link_to "Pridat Inzerat", new_item_path%>  
+<%= link_to "Pridat Inzerat", new_item_path, class: "btn btn-primary" %>  
 
 <%= render @items %> 
 
