--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,5 +1,9 @@
-<h1>Pridanie kategorie</h1>
-<p><%= link_to "Spat", categories_path %></p>
+<div class="container mt-5">
+    <div class="d-flex justify-content-between align-items-center mb-4">
+        <h1>Pridanie kategorie</h1>
+        <p><%= link_to "Spat", categories_path, class: "btn btn-primary" %></p>
+    </div>
 
-<%= render 'shared/errors', resource: @category %>
-<%= render 'form', category: @category %>
+    <%= render 'shared/errors', resource: @category %>
+    <%= render 'form', category: @category %>
+</div>
