--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -1,7 +1,9 @@
-<%= form_with model: category do |f| %>
-    <div>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
-    </div>
-    <%= f.submit t('.save_changes') %>
+<%= form_with model: category, local: true do |f| %>
+  <div class="form-group">
+    <%= f.label :name, class: "form-label" %>
+    <%= f.text_field :name, class: "form-control" %>
+  </div>
+  <div class="mt-3">
+    <%= f.submit t('.save_changes'), class: "btn btn-primary" %>
+  </div>
 <% end %>
