--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,13 +1,24 @@
-<h1>Kategorie</h1>
-<p>
-  <%= link_to "Pridat Kategoriu", new_category_path %>
-</p>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1>Kategorie</h1>
+    <%= link_to "Pridat Kategoriu", new_category_path, class: "btn btn-primary" %>
+  </div>
 
-<% @categories.each do |category| %>
-  <h3>
-    <%= link_to category.name, category_path(category)%>    
-  </h3>
-  <p><%= link_to "Upravit", edit_category_path(category)%></p>
-  <p><%= link_to "Vymazat", category_path(category), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %></p>
-  <hr>
-<% end %>
+
+  <div class="row">
+  <% @categories.each do |category| %>
+    <div class="col-md-4">
+      <div class="card mb-4">
+        <div class="card-body">
+          <h5 class="card-title"><%= link_to category.name, category_path(category), style: "text-decoration: none;" %></h5>
+          <p>
+            <%= link_to "Upravit", edit_category_path(category), class: "btn btn-warning" %>
+            <%= link_to "Vymazat", category_path(category), data: { turbo_method: :delete, turbo_confirm: "Urcite?" }, class: "btn btn-danger" %>
+          </p>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
+
+</div>
