--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,16 +1,18 @@
-
-<%= form_with model: item do |f| %>
-    <div>
-        <%= f.label :name %>
-        <%= f.text_field :name %>
+<%= form_with model: item, local: true do |f| %>
+    <div class="form-group">
+        <%= f.label :name, class: "form-label" %>
+        <%= f.text_field :name, class: "form-control" %>
     </div>
-    <div>
-        <%= f.label :price %>
-        <%= f.text_field :price %>
+    <div class="form-group">
+        <%= f.label :price, class: "form-label" %>
+        <%= f.text_field :price, class: "form-control" %>
     </div>
-    <div>
-        <%= f.label :caterogy_id %>
-        <%= f.select :category_id, Category.all.map { |c| [c.name, c.id]} %>
+    <div class="form-group">
+        <%= f.label :category_id, class: "form-label" %>
+        <%= f.select :category_id, Category.all.map { |c| [c.name, c.id] }, { include_blank: false }, class: "form-control" %>
     </div>
-    <%= f.submit t('.save_changes'), class: "btn btn-primary" %>
+    <div class="mt-3">
+        <%= f.submit t('.save_changes'), class: "btn btn-primary" %>
+    </div>
+    
 <% end %>
