--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,9 +1,10 @@
-<h3><%= link_to item.name, item_path(item)%></h3>
+<div class="list-group-item">
+  <h4 class="mb-2"><%= link_to item.name, item_path(item), class: "text-decoration-none" %></h4>
 
-<%= item.price %><br>
-<%= item.phone %>
-    
-<p><%= link_to "Upravit", edit_item_path(item)%></p>
-<p><%= link_to "Odstranit", item_path(item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %></p>
-    
-<hr>
+  <p class="fw-bold">Cena: <%= item.price %> €</p>
+
+  <div class="d-flex justify-content-start gap-2">
+    <%= link_to "Upravit", edit_item_path(item), class: "btn btn-warning btn-sm" %>
+    <%= link_to "Odstranit", item_path(item), class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: "Určite?" } %>
+  </div>
+</div>
