--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,10 @@
-<h1>Inzeraty</h1>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1>Inzeraty</h1>
+    <%= link_to "Pridat Inzerat", new_item_path, class: "btn btn-primary" %>
+  </div>
 
-<%= link_to "Pridat Inzerat", new_item_path, class: "btn btn-primary" %>  
-
-<%= render @items %> 
-
-<%# @items.each do |item| %>
-    <%#= render 'item', item: item %>
-<%# end %>
+  <div class="list-group">
+    <%= render @items %> 
+  </div>
+</div>
