--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,13 +1,24 @@
-<h1>Detial inzeratu</h1>
+<div class="container mt-5">
+  <div class="d-flex justify-content-between align-items-center mb-4">
+    <h1>Detial inzeratu</h1>
+    <%= link_to "Spat", items_path, class: "btn btn-primary" %>
+  </div>
 
-<p><%= link_to "Spat", items_path %></p>
+  <div class="card mb-4">
+    <div class="card-body">
+      <h5 class="card-title"><%= @item.name %></h5>
+      <h6 class="card-subtitle mb-2 text-body-secondary">
+        <% if @item.category.present? %>
+          <p>Katerogia: <%= @item.category.name %></p>
+        <% end %>
+      </h6>
+      <p class="card-text">Cena: <%= @item.price %> €</p>
+      <%= link_to "Upravit", edit_item_path(@item), class: "btn btn-warning"%>
+      <%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"}, class: "btn btn-danger" %>
+    </div>
+  </div>
+</div>
 
-<% if @item.category.present? %>
-    <p>Katerogia: <%= @item.category.name %></p>
-<% end %>
 
-<%= @item.name %><br>
-<%= @item.price %>
 
-<p><%= link_to "Upravit", edit_item_path(@item)%></p>
-<p><%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"} %></p>
+
