--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group">
         <%= f.label :category_id, class: "form-label" %>
-        <%= f.select :category_id, Category.all.map { |c| [c.name, c.id] }, { include_blank: false }, class: "form-control" %>
+        <%= f.select :category_id, Category.all.map { |c| [c.name, c.id] }, { include_blank: false }, class: "form-select" %>
     </div>
     <div class="mt-3">
         <%= f.submit t('.save_changes'), class: "btn btn-primary" %>
