support bootstrap js, partial footer

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,6 @@
       <%= yield %>
     </div>
 
-    <footer class="text-center py-3 fixed-bottom" style="background-color: #e3f2fd;">
-      <div class="container">
-        <p class="mb-0">© 2024 Bazarko</p>
-      </div>
-    </footer>
-
+    <%= render 'shared/footer' %>
   </body>
 </html>
