--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,3 +1,5 @@
+<%= controller_name %> | <%= action_name %>
+
 <nav class="navbar navbar-expand-lg mb-3" style="background-color: #e3f2fd;">
   <div class="container-fluid">
     <%= link_to 'Bazarko', root_path, class: 'navbar-brand' %>
@@ -7,13 +9,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "Inzeraty", items_path, class: "nav-link" %>
+            <%= link_to "Inzeraty", items_path, class: "nav-link #{ "active" if controller_name == "items"}" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Kategorie", categories_path, class: "nav-link" %>
+            <%= link_to "Kategorie", categories_path, class: "nav-link #{ "active" if controller_name == "categories"} " %>
           </li>
           <li class="nav-item">
-            <%= link_to "Kontakt", contact_path, class: "nav-link" %>
+            <%= link_to "Kontakt", contact_path, class: "nav-link #{ "active" if current_page?(contact_path)}" %>
           </li>
         </ul>
       </div>
