--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: category, local: true do |f| %>
+<%= form_with model: [:admin, category], local: true do |f| %>
   <div class="form-group">
     <%= f.label :name, class: "form-label" %>
     <%= f.text_field :name, class: "form-control" %>
