--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -1,4 +1,5 @@
 <%= controller_name %> | <%= action_name %>
+<div class="alert alert-danger" role="alert">ADMIN PANEL</div>
 
 <nav class="navbar navbar-expand-lg mb-3" style="background-color: #e3f2fd;">
   <div class="container-fluid">
@@ -9,16 +10,7 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <%= link_to "Inzeraty", items_path, class: "nav-link #{ "active" if controller_name == "items"}" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Kategorie", categories_path, class: "nav-link #{ "active" if controller_name == "categories"} " %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Kontakt", contact_path, class: "nav-link #{ "active" if current_page?(contact_path)}" %>
-          </li>
-          <li class="nav-item">
-            <%= link_to "Admin (kategorie)", admin_categories_path, class: "nav-link #{ "active" if current_page?(contact_path)}" %>
+            <%= link_to "Kategorie", admin_categories_path, class: "nav-link #{ "active" if controller_name == "categories"} " %>
           </li>
         </ul>
       </div>
