gem Devise for items contoller

--- a/app/views/shared/_layout.html.erb
+++ b/app/views/shared/_layout.html.erb
@@ -23,6 +23,9 @@
     <% else %>
       <%= render 'shared/navbar' %>
     <% end %>
+
+    <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     
     <div class="container" style="padding-bottom: 80px;"> 
       <%= yield %>
