--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -1,7 +1,6 @@
-<%= controller_name %> | <%= action_name %>
-<div class="alert alert-danger" role="alert">ADMIN PANEL</div>
-
-<nav class="navbar navbar-expand-lg mb-3" style="background-color: #e3f2fd;">
+<%#= controller_name %> 
+<%#= action_name %>
+<nav class="navbar navbar-expand-lg mb-3" style="background-color: #f8d7da;">
   <div class="container-fluid">
     <%= link_to 'Bazarko', root_path, class: 'navbar-brand' %>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -14,5 +13,6 @@
           </li>
         </ul>
       </div>
+      <div>ADMIN PANEL</div>
   </div>
 </nav>
