--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,5 @@
-<%= controller_name %> | <%= action_name %>
+<%#= controller_name %> 
+<%#= action_name %>
 
 <nav class="navbar navbar-expand-lg mb-3" style="background-color: #e3f2fd;">
   <div class="container-fluid">
@@ -18,9 +19,17 @@
             <%= link_to "Kontakt", contact_path, class: "nav-link #{ "active" if current_page?(contact_path)}" %>
           </li>
           <li class="nav-item">
-            <%= link_to "Admin (kategorie)", admin_categories_path, class: "nav-link #{ "active" if current_page?(contact_path)}" %>
+            <%= link_to "Admin (kategorie)", admin_categories_path, class: "nav-link #{ "active" if current_page?(admin_categories_path)}" %>
           </li>
+          <% if user_signed_in? %>
+            <li><%= link_to "Profile", edit_user_registration_path, class: "btn btn-primary" %></li>
+            <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %></li>
+          <% else %>
+            <li><%= link_to "Login", new_user_session_path, class: "btn btn-primary" %></li>
+            <li><%= link_to "Register", new_user_registration_path, class: "btn btn-primary" %></li>
+          <% end %>
         </ul>
       </div>
+      
   </div>
 </nav>
