--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
         <span class="navbar-toggler-icon"></span>
       </button>     
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <%= link_to "Inzeraty", items_path, class: "nav-link #{ "active" if controller_name == "items"}" %>
           </li>
@@ -21,6 +21,9 @@
           <li class="nav-item">
             <%= link_to "Admin (kategorie)", admin_categories_path, class: "nav-link #{ "active" if current_page?(admin_categories_path)}" %>
           </li>
+        </ul>
+
+        <ul class="navbar-nav">
           <% if user_signed_in? %>
             <li><%= link_to "Profile", edit_user_registration_path, class: "btn btn-primary" %></li>
             <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %></li>
@@ -28,8 +31,8 @@
             <li><%= link_to "Login", new_user_session_path, class: "btn btn-primary" %></li>
             <li><%= link_to "Register", new_user_registration_path, class: "btn btn-primary" %></li>
           <% end %>
+
         </ul>
       </div>
-      
   </div>
 </nav>
