--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -7,14 +7,16 @@
   <div class="card mb-4">
     <div class="card-body">
       <h5 class="card-title"><%= @item.name %></h5>
-      <h6 class="card-subtitle mb-2 text-body-secondary">
+      <h6 class="card-subtitle text-body-secondary">
         <% if @item.category.present? %>
           <p>Katerogia: <%= @item.category.name %></p>
         <% end %>
+        <p>Majitel: <%= @item.user.email %></p>
       </h6>
       <p class="card-text">Cena: <%= @item.price %> €</p>
       <%= link_to "Upravit", edit_item_path(@item), class: "btn btn-warning"%>
       <%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"}, class: "btn btn-danger" %>
+
     </div>
   </div>
 </div>
