--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -25,6 +25,7 @@
 
         <ul class="navbar-nav">
           <% if user_signed_in? %>
+            <li class="nav-link"><%= current_user.email %></li>
             <li><%= link_to "Profile", edit_user_registration_path, class: "btn btn-primary" %></li>
             <li><%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-danger" %></li>
           <% else %>
