--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -7,12 +7,15 @@
         <span class="navbar-toggler-icon"></span>
       </button>     
       <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+        <ul class="navbar-nav me-auto">
           <li class="nav-item">
             <%= link_to "Kategorie", admin_categories_path, class: "nav-link #{ "active" if controller_name == "categories"} " %>
           </li>
         </ul>
+        <ul class="navbar-nav">
+          <li class="nav-link"><%= current_user.email %></li>
+          <li class="nav-link">ADMIN PANEL</li>
+        </ul>
       </div>
-      <div>ADMIN PANEL</div>
   </div>
 </nav>
