--- a/app/views/shared/_layout.html.erb
+++ b/app/views/shared/_layout.html.erb
@@ -18,6 +18,7 @@
   </head>
 
   <body>
+    <p>bla</p>
     <% if local_assigns[:admin] %>
       <%= render 'shared/navbar_admin' %>
     <% else %>
