--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -9,8 +9,7 @@
     <div class="col-md-4">
       <div class="card mb-4">
         <div class="card-body">
-          <h5 class="card-title"><%#= link_to category.name, category_path(category) %></h5>
-          <h5 class="card-title"><%= category.name %></h5>
+          <h5 class="card-title"><%= link_to category.name, category_path(category) %></h5>
         </div>
       </div>
     </div>
