Editing visual for category items

--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Detial kategorie</h1>
+    <h1>Detail kategorie</h1>
     <%= link_to "Spat", admin_categories_path, class: "btn btn-primary" %>
   </div>
 
