--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,17 +3,17 @@
     <h1>Kategorie</h1>
   </div>
 
-
   <div class="row">
-  <% @categories.each do |category| %>
-    <div class="col-md-4">
-      <div class="card mb-4">
-        <div class="card-body">
-          <h5 class="card-title"><%= link_to category.name, category_path(category) %></h5>
+    <% @categories.each do |category| %>
+      <div class="col-12">
+        <div class="card mb-3 border-0 shadow-lg bg-light">
+          <div class="card-body">
+            <h5 class="card-title">
+              <%= link_to category.name, category_path(category), class: "text-decoration-none text-primary" %>
+            </h5>
+          </div>
         </div>
       </div>
-    </div>
-  <% end %>
-</div>
-
+    <% end %>
+  </div>
 </div>
