--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -14,6 +14,14 @@
         <p>Majitel: <%= @item.user.email %></p>
       </h6>
       <p class="card-text">Cena: <%= @item.price %> €</p>
+
+      <% if @item.images.attached? %>
+          <% @item.images.each do |image| %>
+            <%= image_tag(image, width: 150) %>
+            <br>
+          <% end %>
+      <% end %>
+
       <% if @item.user == current_user %>
         <%= link_to "Upravit", edit_item_path(@item), class: "btn btn-warning"%>
         <%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"}, class: "btn btn-danger" %>
