--- a/app/views/items/_item.html.erb
+++ b/app/views/items/_item.html.erb
@@ -1,15 +1,24 @@
 <div class="list-group-item shadow-sm mb-3 p-3 rounded bg-light">
+  <% if item.images.first&.representable? %>
+    <%= link_to item_path(item) do %>
+      <%= image_tag item.images.first.variant(:thumb), class: 'img-fluid' %>
+    <% end %>
+  <% end %>
+  
   <h4 class="mb-2">
     <%= link_to item.name, item_path(item), class: "text-decoration-none" %>
   </h4>
 
   <p class="fw-bold">Cena: <%= item.price %> €</p>
   <p>Majitel: <%= item.user.email %></p>
-
-  <% if item.user == current_user %>
-    <div class="d-flex justify-content-start gap-2">
-      <%= link_to "Upravit", edit_item_path(item), class: "btn btn-warning btn-sm" %>
-      <%= link_to "Odstranit", item_path(item), class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: "Určite?" } %>
-    </div>
-  <% end %>
+  
+  <div class="mt-3">
+    <% if item.user == current_user %>
+      <div class="d-flex justify-content-start gap-2">
+        <%= link_to "Upravit", edit_item_path(item), class: "btn btn-warning btn-sm" %>
+        <%= link_to "Odstranit", item_path(item), class: "btn btn-danger btn-sm", data: { turbo_method: :delete, turbo_confirm: "Určite?" } %>
+      </div>
+    <% end %>
+  </div>
+  
 </div>
