--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Detial inzeratu</h1>
+    <h1><%= @item.name %></h1>
     <%= link_to "Spat", items_path, class: "btn btn-primary" %>
   </div>
 
@@ -15,17 +15,30 @@
       </h6>
       <p class="card-text">Cena: <%= @item.price %> €</p>
 
-      <% if @item.images.attached? %>
-          <% @item.images.each do |image| %>
-            <%= image_tag(image, width: 150) %>
-            <br>
+      <div id="carouselExample" class="carousel slide">
+        <div class="carousel-inner">
+          <% @item.images.each_with_index do |image, index| %>
+            <div class="carousel-item <%= 'active' if index == 0 %>">
+              <%= image_tag image.variant(:normal), class: "d-block w-100" if image.representable? %>
+            </div>
           <% end %>
-      <% end %>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
 
-      <% if @item.user == current_user %>
+      <div class="mt-3">
+        <% if @item.user == current_user %>
         <%= link_to "Upravit", edit_item_path(@item), class: "btn btn-warning"%>
         <%= link_to "Odstranit", item_path(@item), data: {turbo_method: :delete, turbo_confirm: "Urcite?"}, class: "btn btn-danger" %>
       <% end %>
+      </div>
     </div>
   </div>
 </div>
