--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -19,7 +19,7 @@
           <%= link_to "Kontakt", contact_path, class: "nav-link #{ 'active fw-bold' if current_page?(contact_path) } fs-5" %>
         </li>
         <li class="nav-item">
-          <%= link_to "Admin (kategorie)", admin_categories_path, class: "nav-link #{ 'active fw-bold' if current_page?(admin_categories_path) } fs-5" %>
+          <%= link_to "Admin", admin_categories_path, class: "nav-link #{ 'active fw-bold' if current_page?(admin_categories_path) } fs-5" %>
         </li>
       </ul>
       <ul class="navbar-nav d-flex align-items-center">
