--- a/app/views/admin/categories/show.html.erb
+++ b/app/views/admin/categories/show.html.erb
@@ -1,15 +1,15 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Detail kategorie</h1>
-    <%= link_to "Spat", admin_categories_path, class: "btn btn-primary" %>
+    <h1><%= t('categories.show.title') %></h1>
+    <%= link_to t('categories.show.admin.back'), admin_categories_path, class: "btn btn-primary" %>
   </div>
 
   <div class="card mb-4">
     <div class="card-header d-flex justify-content-between align-items-center pb-4 pt-4">
       <h2 class="card-title"><%= @category.name %></h2>
       <div>
-        <%= link_to "Upraviť", edit_admin_category_path(@category), class: "btn btn-warning" %>
-        <%= link_to "Vymazať", admin_category_path(@category), data: { turbo_method: :delete, turbo_confirm: "Určite?" }, class: "btn btn-danger" %>
+        <%= link_to t('categories.show.admin.edit'), edit_admin_category_path(@category), class: "btn btn-warning" %>
+        <%= link_to t('categories.show.admin.delete'), admin_category_path(@category), data: { turbo_method: :delete, turbo_confirm: t('categories.show.admin.delete_confirm') }, class: "btn btn-danger" %>
       </div>
     </div>
   </div>
