--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
     <div class="d-flex justify-content-between align-items-center mb-4">
-        <h1>Pridanie inzeratu</h1>
-        <p><%= link_to "Spat", items_path, class: "btn btn-primary" %></p>
+        <h1><%= t('items.new.title') %></h1>
+        <p><%= link_to t('items.new.back'), items_path, class: "btn btn-primary" %></p>
     </div>
 
     <%= render 'shared/errors', resource: @item %>
