--- a/app/views/admin/categories/_form.html.erb
+++ b/app/views/admin/categories/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_with model: [:admin, category], local: true do |f| %>
   <div class="form-group">
-    <%= f.label :name, class: "form-label" %>
+    <%= f.label :name, t('categories.form.name'), class: "form-label" %>
     <%= f.text_field :name, class: "form-control" %>
   </div>
   <div class="mt-3">
-    <%= f.submit t('.save_changes'), class: "btn btn-primary" %>
+    <%= f.submit t('categories.form.save_changes'), class: "btn btn-primary" %>
   </div>
 <% end %>
