--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Kategorie</h1>
-    <%= link_to "Pridat Kategoriu", new_admin_category_path, class: "btn btn-primary" %>
+    <h1><%= t('categories.index.title') %></h1>
+    <%= link_to t('categories.new.title'), new_admin_category_path, class: "btn btn-primary" %>
   </div>
 
 
@@ -12,8 +12,8 @@
         <div class="card-body">
           <h5 class="card-title"><%= link_to category.name, admin_category_path(category), class: "text-decoration-none text-primary" %></h5>
           <p>
-            <%= link_to "Upravit", edit_admin_category_path(category), class: "btn btn-warning" %>
-            <%= link_to "Vymazat", admin_category_path(category), data: { turbo_method: :delete, turbo_confirm: "Urcite?" }, class: "btn btn-danger" %>
+            <%= link_to t('categories.show.admin.edit'), edit_admin_category_path(category), class: "btn btn-warning" %>
+            <%= link_to t('categories.show.admin.delete'), admin_category_path(category), data: { turbo_method: :delete, turbo_confirm: t('categories.show.admin.delete_confirm') }, class: "btn btn-danger" %>
           </p>
         </div>
       </div>
