--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Kategorie</h1>
+    <h1><%= t('categories.index.title') %></h1>
   </div>
 
   <div class="row">
