--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,31 +1,31 @@
 <%= form_with model: item, local: true do |f| %>
     <div class="form-group">
-        <%= f.label :name, class: "form-label" %>
+        <%= f.label :name, t('items.form.name'), class: "form-label" %>
         <%= f.text_field :name, class: "form-control" %>
     </div>
     <div class="form-group">
-        <%= f.label :price, class: "form-label" %>
+        <%= f.label :price, t('items.form.price'), class: "form-label" %>
         <%= f.text_field :price, class: "form-control" %>
     </div>
     <div class="form-group">
-        <%= f.label :category_id, class: "form-label" %>
+        <%= f.label :category_id, t('items.form.category'), class: "form-label" %>
         <%= f.select :category_id, Category.all.map { |c| [c.name, c.id] }, { include_blank: false }, class: "form-select" %>
     </div>
 
     <div class="form-group">
-        <%= f.label :image, "Zvol obrazok", class: "form-label" %><br>
+        <%= f.label :image, t('items.form.image'), class: "form-label" %><br>
         <% if item.images.attached? %>
             <% item.images.each do |image| %>
                 <%= f.hidden_field :images, multiple: true, value: image.signed_id %>
                 <%= image_tag(image, width: 150) %>
-                <%= link_to "Vymazat", remove_image_item_path(image), data: {turbo_method: :delete, turbo_confirm: "Urcite?"}, class: "btn btn-danger btn-sm mt-2" %>
+                <%= link_to t('items.form.remove_image'), remove_image_item_path(image), data: {turbo_method: :delete, turbo_confirm: t('items.form.remove_image_confirm')}, class: "btn btn-danger btn-sm mt-2" %>
             <% end %>
         <% end %>
         <%= f.file_field :images, multiple: true, class: "form-control form-control-sm mt-2" %>
     </div>
 
     <div class="mt-3">
-        <%= f.submit t('.save_changes'), class: "btn btn-primary" %>
+        <%= f.submit t('items.form.save_changes'), class: "btn btn-primary" %>
     </div>
     
 <% end %>
