--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,13 +1,13 @@
 <div class="container mt-5">
   <div class="d-flex justify-content-between align-items-center mb-4">
-    <h1>Inzeraty</h1>
-    <%= link_to "Pridat Inzerat", new_item_path, class: "btn btn-primary" %>
+    <h1><%= t('items.index.title') %></h1>
+    <%= link_to t('items.index.add_item'), new_item_path, class: "btn btn-primary" %>
   </div>
 
   <%= form_with url: items_path, method: :get, local: true do |form| %>
     <div class="input-group mb-3">
-      <%= form.text_field :search, class: "form-control", placeholder: "Vyhľadať inzerát...", value: params[:search] %>
-      <%= form.submit "Hľadať", class: "btn btn-primary" %>
+      <%= form.text_field :search, class: "form-control", placeholder: t('items.index.search_placeholder'), value: params[:search] %>
+      <%= form.submit t('items.index.search_button'), class: "btn btn-primary" %>
     </div>
   <% end %>
 
