--- a/app/views/shared/_navbar_admin.html.erb
+++ b/app/views/shared/_navbar_admin.html.erb
@@ -2,23 +2,23 @@
 <%#= action_name %>
 <nav class="navbar navbar-expand-lg shadow p-3 mb-4" style="background-color: #f8d7da;">
   <div class="container-fluid">
-    <%= link_to 'Bazarko', root_path, class: 'navbar-brand fw-bold fs-4' %>
+    <%= link_to t('navbar.brand'), root_path, class: 'navbar-brand fw-bold fs-4' %>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <%= link_to "Kategorie", admin_categories_path, class: "nav-link #{ 'active fw-bold' if controller_name == 'categories' } fs-5" %>
+          <%= link_to t('navbar.categories'), admin_categories_path, class: "nav-link #{ 'active fw-bold' if controller_name == 'categories' } fs-5" %>
         </li>
       </ul>
       <ul class="navbar-nav d-flex align-items-center">
         <li class="nav-item nav-link me-3 fs-5"><%= current_user.email %></li>
         <li class="nav-item">
-          <%= link_to "Profile", edit_user_registration_path, class: "btn btn-outline-light btn-sm rounded-pill fs-6" %>
+          <%= link_to t('navbar.profile'), edit_user_registration_path, class: "btn btn-outline-light btn-sm rounded-pill fs-6" %>
         </li>
         <li class="nav-item">
-          <%= button_to "Logout", destroy_user_session_path, method: :delete, class: "btn btn-outline-light btn-sm rounded-pill fs-6" %>
+          <%= button_to t('navbar.logout'), destroy_user_session_path, method: :delete, class: "btn btn-outline-light btn-sm rounded-pill fs-6" %>
         </li>
       </ul>
     </div>
